# Cryptix-CoreUtils

./: Cargo.toml  README.md
.github/workflows/: build.yml  check-typos.yml
coreutils/src/: cat.rs  chmod.rs  clear.rs  core.rs  date.rs  echo.rs  hostname.rs  id.rs  lib.rs  ls.rs  pwd.rs  sleep.rs  syscall.rs  tty.rs  uname.rs  whoami.rs  yes.rs
