[workspace]
members = [
    "coreutils",
    "bin/cat", 
    "bin/chmod", 
    "bin/clear", 
    "bin/echo", 
    "bin/date", 
    "bin/false", 
    # "bin/fgrep", 
    "bin/hostname", 
    "bin/id", 
    # "bin/kill", 
    "bin/ls", 
    # "bin/mkdir", 
    # "bin/more", 
    "bin/pwd", 
    "bin/sleep", 
    # "bin/touch", 
    "bin/true", 
    "bin/tty", 
    "bin/uname", 
    "bin/whoami",
    "bin/yes",
]
resolver = "3"
